--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,10 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="flex" style="display: contents">
+			<div class="mx-auto flex min-h-screen max-w-md flex-col items-center px-4 py-6">
+				%sveltekit.body%
+			</div>
+		</div>
 	</body>
 </html>
