--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex" style="display: contents">
-			<div class="mx-auto flex min-h-screen max-w-md flex-col items-center px-4 py-6">
+			<div class="mx-auto mb-20 flex min-h-screen max-w-md flex-col px-4 py-6">
 				%sveltekit.body%
 			</div>
 		</div>
